--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,11 +8,13 @@
             "args": [
                 "-std=c++20",
                 "-ftime-report",
+                "-I${workspaceFolder}\\vendor",
                 "-I${workspaceFolder}\\dependencies\\glfw-3.3.6.bin.WIN64\\include",
                 "-I${workspaceFolder}\\dependencies\\glew-2.2.0\\include",
                 "-L${workspaceFolder}\\dependencies\\glfw-3.3.6.bin.WIN64\\lib-mingw-w64",
                 "-L${workspaceFolder}\\dependencies\\glew-2.2.0\\lib\\Release\\x64",
                 "-g",
+                "${workspaceFolder}\\vendor\\stb_image\\*.cpp",
                 "${workspaceFolder}\\src\\*.cpp",
                 "-DDEBUG",
                 "-DGLFW_DLL",
@@ -38,10 +40,12 @@
             "args": [
                 "-std=c++20",
                 "-ftime-report",
+                "-I${workspaceFolder}\\vendor",
                 "-I${workspaceFolder}\\dependencies\\glfw-3.3.6.bin.WIN64\\include",
                 "-I${workspaceFolder}\\dependencies\\glew-2.2.0\\include",
                 "-L${workspaceFolder}\\dependencies\\glfw-3.3.6.bin.WIN64\\lib-mingw-w64",
                 "-L${workspaceFolder}\\dependencies\\glew-2.2.0\\lib\\Release\\x64",
+                "${workspaceFolder}\\vendor\\stb_image\\*.cpp",
                 "${workspaceFolder}\\src\\*.cpp",
                 "-DGLEW_STATIC",
                 "-static",
