--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,7 @@
                 "-L${workspaceFolder}\\dependencies\\glew-2.2.0\\lib\\Release\\x64",
                 "-g",
                 "${workspaceFolder}\\vendor\\stb_image\\*.cpp",
+                "${workspaceFolder}\\kenny\\*.cpp",
                 "${workspaceFolder}\\sandbox\\*.cpp",
                 "${workspaceFolder}\\src\\*.cpp",
                 "-DDEBUG",
@@ -49,6 +50,7 @@
                 "-L${workspaceFolder}\\dependencies\\glfw-3.3.6.bin.WIN64\\lib-mingw-w64",
                 "-L${workspaceFolder}\\dependencies\\glew-2.2.0\\lib\\Release\\x64",
                 "${workspaceFolder}\\vendor\\stb_image\\*.cpp",
+                "${workspaceFolder}\\kenny\\*.cpp",
                 "${workspaceFolder}\\sandbox\\*.cpp",
                 "${workspaceFolder}\\src\\*.cpp",
                 "-DGLEW_STATIC",
